--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,1 +1,6 @@
 $mainColor : blue;
+
+$linkColor: #3f51b5;
+$linkBackGroundColor : #fafafa;
+$liBorderColor : rgba(0,0,0,.06);
+$aColor: rgba(0,0,0,.54);
