--- a/src/app/common/header/header/header.component.html
+++ b/src/app/common/header/header/header.component.html
@@ -1,3 +1,7 @@
-<p>
-  header works!
-</p>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <button mat-icon-button (click)="clickMenu()">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </mat-toolbar-row>
+</mat-toolbar>
