--- a/src/app/common/sidenav/sidenav/sidenav.component.html
+++ b/src/app/common/sidenav/sidenav/sidenav.component.html
@@ -1,3 +1,12 @@
-<p>
-  sidenav works!
-</p>
+<div>
+  <nav class="app-side-nav">
+    <ul>
+      <li>
+        <a routerLink="/dashboard">Dashboard</a>
+      </li>
+      <li>
+        <a routerLink="/table"> Table</a>
+      </li>
+    </ul>
+  </nav>
+</div>
