--- a/src/app/pages/table/table/table.component.html
+++ b/src/app/pages/table/table/table.component.html
@@ -1,3 +1,52 @@
-<p style="min-width: 300px;min-height: 600px;border:solid 1px">
-  table works!
-</p>
+<div class="container" *ngIf="!dirty">
+  <div class="row">
+    <div class="col-md-12">
+      loading...
+      </div>
+  </div>
+</div>
+
+<div class="container" *ngIf="dirty && true">
+  <div class="row">
+    <div class="col-md-12">
+      <input class="form-control" type="text" [(ngModel)]="inputVal"/>
+      <div>
+        {{ inputVal}}
+      </div>
+      <br>
+      <br>
+    </div>
+    <div class="col-md-12">
+      <table class="table table-hover table-striped">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+          </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Jacob</td>
+          <td>Thornton</td>
+          <td>@fat</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>Larry</td>
+          <td>the Bird</td>
+          <td>@twitter</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
